--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_MEDIA_URL=http://localhost/storage
+ASSET_URL=/storage
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
